--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,13 @@ body{
     align-items: center;
     margin-right: 20px;
     margin-left: 20px;
+    cursor: pointer;
     
   }
   .youtube-logo{
     height: 50px;
     width: 150px;
+    cursor: pointer;
   }
   .search-bar{
     height: 40px;
@@ -40,6 +42,7 @@ body{
     margin-left: 30px;
     height: 50px;
     margin-top: 5px;
+    cursor: pointer;
 
   }
   .voice-search-button{
@@ -133,6 +136,7 @@ body{
     border-radius: 8px;
     margin-top: 100px;
     width: 450px;
+    cursor: pointer;
     
   }
   .thumbnail-title{
@@ -292,6 +296,7 @@ body{
     width: 65px;
     background-color: black;
     margin-left: 0px;
+    cursor: pointer;
 }
 .short-thumbnail{
     position: relative;
@@ -300,6 +305,7 @@ body{
     width: 250px;
     height: 400px;
     border-radius: 14px;
+    cursor: pointer;
     
     
 }
